# devtrack

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  app.vue  docker-compose.yml  package-lock.json  package.json  server-sync.yml  tailwind.config.ts
backend/: .env.example  Dockerfile  manage.py  page_perms.json  pyproject.toml  requirements.txt
backend/apps/: permissions.py  urls.py  widgets.py
backend/apps/ai/: admin.py  apps.py  client.py  forms.py  models.py  opencode.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/ai_testing/: admin.py  agent.py  (+11 more)
backend/config/: celery.py  settings.py  urls.py  wsgi.py
backend/fixtures/: ai_prompts.json
backend/tests/: conftest.py  factories.py  test_ai_admin.py  test_ai_client.py  test_ai_models.py  test_ai_service.py  test_ai_testing_agent.py  test_ai_testing_api.py  test_ai_testing_models.py  test_ai_testing_services.py  test_ai_views.py  test_ai_wizard.py  test_assignment_api.py  test_assignment_workflow.py  test_attachments.py  test_auth.py  test_auto_assign.py  test_backups.py  test_bulletins.py  test_celery_tasks.py  test_commit_sync.py  test_dashboard.py  test_default_project.py  test_developer_insights.py  test_external_api.py  test_external_notifications.py  test_gateway_status.py  test_github_sync.py  test_impersonation.py  test_insights_api.py  test_issue_analyses.py  test_issue_analysis.py  test_issue_comments.py  test_issues.py  test_issues_duplicate_check.py  test_kpi_api.py  test_kpi_metrics.py  test_kpi_scoring.py  test_kpi_suggestions.py  test_notifications.py  (+25 more)
(+1101 files in other folders)
